<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hostName">http://192.168.1.103/androidService/</string>
    <string name="AppPath">Ns_login</string>
    <string name="userInfoFileName">userInfo.txt</string>
    
    <string name="app_name">号码助手</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_menu_title">号码助手</string>
    <string name="main_menu_button1">查看通讯录</string>
    <string name="main_menu_button2">发布号码</string>
    <string name="main_menu_button3">收集号码</string>
    <string name="main_menu_button4">号码雷达</string>
    <string name="main_menu_button5">同步号码</string>
    <string name="returnMsg">返回</string>
    <string name="usr_list_title">通讯录</string>

</resources>
