<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="30dip"
	android:orientation="horizontal"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_gravity="center">
		<TextView
			android:id="@+id/app_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/main_menu_title"
			/>
		<Button
			android:id="@+id/check_list"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/main_menu_button1"
			/>
		<Button
			android:id="@+id/synchronous_no"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/main_menu_button5"
			/>
		<Button
			android:id="@+id/publish_no"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/main_menu_button2"
			/>
		<Button
			android:id="@+id/collect_no"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/main_menu_button3"
			/>
		<Button
			android:id="@+id/no_radar"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/main_menu_button4"
			/>
	</LinearLayout>
</LinearLayout>
